--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "handlebars": "^4.0.5",
+    "mongojs": "^2.4.0",
     "mysql": "^2.11.1"
   }
 }
