--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "express-handlebars": "^3.0.0",
     "handlebars": "^4.0.5",
     "mongojs": "^2.4.0",
+    "morgan": "^1.7.0",
     "mysql": "^2.11.1"
   }
 }
