--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-handlebars": "^3.0.0",
     "handlebars": "^4.0.5",
     "mongojs": "^2.4.0",
+    "mongoose": "^4.6.0",
     "morgan": "^1.7.0",
     "mysql": "^2.11.1"
   }
