--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-session": "^1.14.1",
     "express-validator": "^2.20.8",
     "handlebars": "^4.0.5",
+    "method-override": "^2.3.6",
     "mongojs": "^2.4.0",
     "mongoose": "^4.6.0",
     "morgan": "^1.7.0",
