--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
     "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "csurf": "^1.9.0",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
